# agile-dashboard

./: .gitignore  .stylelintrc.json  Cargo.toml  README.md  clippy.toml  index.html  package-lock.json  package.json  rustfmt.toml  trunk.toml
.github/workflows/: deployment.yml  lint.yml
src/: config.rs  lib.rs  main.rs  octoapi.rs  style.css
src/components/: banner.rs  carbon_display.rs  chart.rs  cheapest_period.rs  day_summary.rs  mod.rs  region_selector.rs  status.rs  summary.rs  theme_toggle.rs  tracker_display.rs
src/hooks/: mod.rs  use_carbon.rs  use_historical_rates.rs  use_rates.rs  use_region.rs  use_theme.rs  use_tracker.rs
src/models/: carbon.rs  error.rs  mod.rs  rates.rs
src/services/: api.rs  carbon_api.rs  mod.rs  retry.rs
src/utils/: debounce.rs  mod.rs  time.rs
tests/: tests.rs
