[package]
name = "agile-dashboard"
version = "0.3.0"
edition = "2024"

[lib]
name = "agile_dashboard"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
yew = { version = "0.22.0", features = ["csr"] }
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["MediaQueryList"] }
chrono = { version = "0.4.41", features = ["serde"] }
charming = { version = "0.6.0", features = ["wasm"] }
gloo = "0.11.0"
gloo-storage = "0.3.0"
gloo-timers = { version = "0.3.0", features =["futures"] }
thiserror = "2.0.17"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
