[package]
name = "agile-dashboard"
version = "0.5.4"
edition = "2024"

[lib]
name = "agile_dashboard"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
yew = { version = "0.22.0", features = ["csr"] }
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["MediaQueryList", "HtmlSelectElement"] }
chrono = { version = "0.4.43", features = ["serde"] }
charming = { version = "0.6.0", features = ["wasm"] }
gloo = "0.11.0"
gloo-storage = "0.3.0"
gloo-timers = { version = "0.3.0", features =["futures"] }
thiserror = "2.0.18"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.clippy]
# Enable pedantic lints for better code quality
pedantic = { level = "warn", priority = -1 }
# Enable nursery lints
nursery = { level = "warn", priority = -1 }
# Performance lints
perf = { level = "warn", priority = -1 }
# Allow some pedantic lints
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
wildcard_imports = "allow"
must_use_candidate = "allow"
cast_precision_loss = "allow"
future_not_send = "allow"
return_self_not_must_use = "allow"
option_if_let_else = "allow"
derive_partial_eq_without_eq = "allow"
match_same_arms = "allow"
unused_self = "allow"
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
redundant_clone = "allow"
uninlined_format_args = "allow"

[lints.clippy.float_cmp]
level = "allow"
priority = 1

[lints.clippy.unreadable_literal]
level = "allow"
priority = 1
